<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff3498db"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="false"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="false"
        android:layout_marginTop="0dp">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageView2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_back"
                android:onClick="KayitOl_GeriOnClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_activity_kayit_ol"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <EditText
            android:id="@+id/kayit_adisoyadi"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ecf0f1"
            android:textColorHint="#3498db"
            android:textSize="22dp"
            android:hint="@string/strAdiSoyadi"
            android:textColor="#3498db"
            android:layout_below="@+id/kayit_sifreTekrar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/kayit_sifre"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/strSifre"
            android:background="#ecf0f1"
            android:textSize="22dp"
            android:textColorHint="#3498db"
            android:textColor="#3498db"
            android:layout_below="@+id/kayit_kullaniciAdi"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/kayit_sifreTekrar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/strSifre"
            android:textColor="#3498db"
            android:background="#ecf0f1"
            android:textColorHint="#3498db"
            android:layout_below="@+id/kayit_sifre"
            android:textSize="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/kayit_kullaniciAdi"
            android:background="#ecf0f1"
            android:textColorHint="#3498db"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="22dp"
            android:hint="@string/strKullaniciAdi"
            android:textColor="#3498db"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/kayit_email"
            android:layout_width="match_parent"
            android:background="#ecf0f1"
            android:textColorHint="#3498db"
            android:textSize="22dp"
            android:layout_height="40dp"
            android:hint="@string/strEmail"
            android:textColor="#3498db"
            android:layout_below="@+id/kayit_adisoyadi"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_marginTop="20dp" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:text="Kullan&#305;m Ko&#351;ullar&#305;n&#305; Kabul Ediyorum"
            android:textSize="18dp"
            android:textColor="#ffecf0f1"
            android:layout_below="@+id/kayit_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="Kayit_BtnKayitOnClick"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff2980b9"
            android:text="@string/title_activity_kayit_ol"
            android:textColor="#ffecf0f1"
            android:layout_above="@+id/button3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="Kayit_BtnKayitOnClick"
            android:layout_marginTop="30dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff3498db"
        android:text="@string/strKayitOl2"
        android:textColor="#ffecf0f1"
        android:onClick="Button3_OnClick"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
